--- a/assets/styles/globals.sass
+++ b/assets/styles/globals.sass
@@ -7,6 +7,7 @@
   font-family: 'Fira Code', sans-serif
   color: $text-default
   font-weight: 400
+  scrollbar-color: $text-lightgray rgba(0, 0, 0, 0)
 
 body
   width: 100%
