--- a/assets/styles/globals.sass
+++ b/assets/styles/globals.sass
@@ -35,3 +35,8 @@ html
   position: relative
   border-radius: 20px
   background: $bg-color
+  z-index: 0
+
+@media (max-width: 769px)
+  body
+    padding: 16px
