--- a/assets/styles/globals.sass
+++ b/assets/styles/globals.sass
@@ -37,6 +37,10 @@ html
   background: $bg-color
   z-index: 0
 
+a
+  text-decoration: none
+
 @media (max-width: 769px)
   body
     padding: 16px
+
