little changes after code-review

--- a/assets/styles/globals.sass
+++ b/assets/styles/globals.sass
@@ -14,7 +14,6 @@ body
   height: 100%
   background: #010c15
   overflow: hidden
-  padding: 40px
 
 html
   width: 100%
@@ -33,7 +32,7 @@ html
   align-items: center
   border: 1px solid #1E2D3D
   position: relative
-  border-radius: 20px
+  //border-radius: 20px
   background: $bg-color
   z-index: 0
 
