--- a/assets/styles/globals.sass
+++ b/assets/styles/globals.sass
@@ -12,6 +12,7 @@
 body
   width: 100%
   height: 100%
+  padding: 24px
   background: #010c15
   overflow: hidden
 
@@ -32,7 +33,7 @@ html
   align-items: center
   border: 1px solid #1E2D3D
   position: relative
-  //border-radius: 20px
+  border-radius: 20px
   background: $bg-color
   z-index: 0
 
